Fix wrong margin-left of .debug-panel
- in pc screens that has no .mt-primaryNavigation
- in mobile screens

--- a/mt-static/css/admin2025/mt.css
+++ b/mt-static/css/admin2025/mt.css
@@ -13948,11 +13948,12 @@ li.nav-item, .mt-sharedPreviewNav .mt-sharedPreviewNav__rightNav li.mt-sharedPre
 /** debug-panel */
 .debug-panel {
   margin: 0 !important;
-  margin-left: var(--left-bar-width) !important;
-}
-
-body:has(.collapsed) .debug-panel {
   margin-left: var(--minimal-left-bar-width) !important;
+}
+@media (min-width: 768px) {
+  body:has(.mt-primaryNavigation):not(:has(.collapsed)) .debug-panel {
+    margin-left: var(--left-bar-width) !important;
+  }
 }
 
 /** admin-header */
